--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,20 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
+
+    <link href="node_modules/cloudinary-video-player/dist/cld-video-player.min.css" rel="stylesheet">
+    <script src="node_modules/cloudinary-video-player/dist/cld-video-player.min.js"
+    type="text/javascript"></script>
+
   </head>
 
   <body>
+    <%# <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_2sVbVp.json"  background="transparent"  speed="1"  style="width: 100%; height: 35rem;"    autoplay></lottie-player> %>
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
+    <%= turbo_frame_tag "modal" %>
+
 
     <%= yield %>
   </body>
