--- a/app/views/arts/_gallery.html.erb
+++ b/app/views/arts/_gallery.html.erb
@@ -12,3 +12,7 @@
     <%= render 'shared/art_modal', art: art %>
   <% end %>
 </div>
+
+
+
+<%# :transformation=>[{:overlay=>{:font_family=>"Source Sans Pro", :font_size=>"600", :text=>"Love"}},{:flags=>"layer_apply"}] %>
