--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,4 +24,6 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 200;
   background-color: #fffaee;
+  color: #140A02;
+  padding-top: 10rem;
 }
