--- a/app/views/contacts/_new.html.erb
+++ b/app/views/contacts/_new.html.erb
@@ -1,19 +1,25 @@
-<div class="container">
-  <h1>Contact Form</h1>
-  <%= simple_form_for :contact, url: contacts_path do |f| %>
-    <div class="col-12 col-md-6 col-lg-8">
-      <%= f.input :name, required: true %>
+<div class="container" id="contact">
+  <div class="card">
+    <div class="card-body">
+        <h1>Contact Form</h1>
+        <%= simple_form_for :contact, url: contacts_path do |f| %>
+          <div class="col-12 col-md-6 col-lg-8">
+            <%= f.input :name, required: true %>
 
-      <%= f.input :email, required: true, input_html: { autocomplete: 'email' } %>
+            <%= f.input :email, required: true, input_html: { autocomplete: 'email' } %>
 
-      <%= f.input :message, as: :text, required: true, placeholder: "Send me a message"%>
+            <%= f.input :message, as: :text, required: true, placeholder: "Send me a message"%>
 
-      <div class= "d-none">
-        <%= f.label :nickname %>
-        <%= f.text_field :nickname, :hint => 'Leave this field blank!' %>
+            <div class= "d-none">
+              <%= f.label :nickname %>
+              <%= f.text_field :nickname, :hint => 'Leave this field blank!' %>
+            </div>
+
+            <%= f.submit 'Send Message', class: 'btn btn-primary' %>
+          </div>
+        <% end %>
       </div>
 
-      <%= f.submit 'Send Message', class: 'btn btn-primary' %>
-    </div>
-  <% end %>
+  </div>
+
 </div>
