--- a/app/views/contacts/_new.html.erb
+++ b/app/views/contacts/_new.html.erb
@@ -1,9 +1,9 @@
 <div class="container" id="contact">
-  <div class="card">
+  <div class="card flex-row">
+    <%= cl_image_tag 'san_fran', class: 'card-img-left example-card-img-responsive'%>
     <div class="card-body">
-        <h1>Contact Form</h1>
-        <%= simple_form_for :contact, url: contacts_path do |f| %>
-          <div class="col-12 col-md-6 col-lg-8">
+      <h4 class="card-title h5 h4-sm">Contact Form</h4>
+      <%= simple_form_for :contact, url: contacts_path do |f| %>
             <%= f.input :name, required: true %>
 
             <%= f.input :email, required: true, input_html: { autocomplete: 'email' } %>
@@ -16,10 +16,7 @@
             </div>
 
             <%= f.submit 'Send Message', class: 'btn btn-primary' %>
-          </div>
         <% end %>
-      </div>
-
+    </div>
   </div>
-
 </div>
