added address field to stripe payment page

--- a/app/assets/stylesheets/components/_gallery.scss
+++ b/app/assets/stylesheets/components/_gallery.scss
@@ -1,6 +1,6 @@
 .gallery .card{
   --bs-card-border-width: 0px;
-  background-color: #ffe4a2;
+  background-color: #e6d4a9;
   position: relative;
 }
 
