--- a/app/assets/stylesheets/components/_contact.scss
+++ b/app/assets/stylesheets/components/_contact.scss
@@ -4,11 +4,27 @@
 }
 
 .contact-picture {
-object-fit: cover;
-flex-direction: column;
+  max-width: 50%;
+  object-fit: cover;
 }
 
-.form {
-  flex-direction: column;
+.form-control {
+  border-radius: 24px;
 }
 
+ #contact .card{
+    flex-direction: row;
+    border-radius: 8px;
+  }
+
+@media only screen and (max-width: 768px) {
+  .contact-picture {
+    object-fit: cover;
+    max-width: fit-content;
+  }
+  #contact .card{
+    flex-direction: column;
+    object-fit: cover;
+  }
+
+}
