--- a/app/views/contacts/_new.html.erb
+++ b/app/views/contacts/_new.html.erb
@@ -1,7 +1,8 @@
 <div class="container" id="contact">
-  <div class="card flex-row">
-    <%= cl_image_tag 'san_fran', class: 'card-img-left example-card-img-responsive'%>
-    <div class="card-body">
+  <div class="card">
+
+    <%= cl_image_tag 'san_fran', class: 'contact-picture img-fluid'%>
+    <div class="card-body form">
       <h4 class="card-title h5 h4-sm">Contact Form</h4>
       <%= simple_form_for :contact, url: contacts_path do |f| %>
             <%= f.input :name, required: true %>
