--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -10,6 +10,7 @@
         </li>
       </ul>
       <p>Estimated delivery in <strong>2 business days</strong></p>
+      <%= link_to 'back', home_path  %>
     </div>
   </div>
 </div>
