--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar fixed-top">
-  <%= link_to "#", class: "navbar-brand" do %>
+  <%= link_to home_path, class: "navbar-brand" do %>
     <div class="title">
       <h3>Melissa Goodway Art</h3>
       <hr>
@@ -8,10 +8,10 @@
   <% end %>
 
     <ul class="nav-menu mr-auto mt-2 mt-lg-0">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="#reel" data-controller="scroll-to" >Reel</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="#animation" data-controller="scroll-to">Animation</a>
       </li>
       <li class="nav-item">
@@ -26,6 +26,11 @@
       <li class="nav-item">
          <a class="nav-link" href="#contact" data-controller="scroll-to">Contact</a>
       </li>
+      <% if user_signed_in? %>
+        <li class="nav-item">
+          <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'nav-link'  %>
+        </li>
+      <% end %>
     </ul>
     <div class="hamburger">
         <span class="bar"></span>
