--- a/app/assets/stylesheets/components/_gallery.scss
+++ b/app/assets/stylesheets/components/_gallery.scss
@@ -7,10 +7,12 @@
 .gallery-container {
   max-width: 100%;
   padding-bottom: 5rem;
+  background-color: #fffaee;
 }
 
 .gallery .row {
   --bs-gutter-x: 0rem;
+  background-color: #fffaee;
 }
 
 .gallery .card :hover {
