--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -8,6 +8,8 @@
 </div>
 <div class="container">
   <%= render 'store' %>
+</div>
+<div class="contact-container">
   <%= render 'contacts/new' %>
 </div>
 
