--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -8,3 +8,20 @@
 @import "gallery";
 @import "images";
 @import "contact";
+@import "store";
+
+
+body {
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 200;
+  color: #140A02;
+  padding-top: 10rem;
+  top: -80px;
+  background-color: #fffaee;
+  opacity: 1;
+  background: repeating-linear-gradient( 45deg, #e6d4a9, #e6d4a9 20px, #fffaee 20px, #fffaee 100px );
+}
+
