--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -5,8 +5,8 @@
       <h1>Order #<%= @order.id %> <small><span class="badge badge-primary"><%= @order.state %></span></small></h1>
       <ul class="list-unstyled">
         <li><strong>ISSUED ON</strong> <%= @order.created_at.to_date %></li>
-        <li><strong>art</strong> <%= @order.art.title %> [<%= @order.art.id %>]</li>
-        <li><strong>TOTAL</strong> <%= humanized_money_with_symbol @order.amount %></li>
+        <li><strong>ART PRODUCT</strong> <%= @order.art.title %> [<%= @order.art.id %>]</li>
+        <li><strong>TOTAL</strong> <%= humanized_money_with_symbol @order.art.price %></li>
         </li>
       </ul>
       <p>Estimated delivery in <strong>2 business days</strong></p>
