--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -3,7 +3,7 @@
     <div class="col-md-3"><%= cl_image_tag @order.art.photo.key, width: '100%' %></div>
     <div class="col">
       <h1>Checkout summary</h1>
-      <p>Purchase of <strong><%= @order.art.title %></strong> for <strong><%= humanized_money_with_symbol @order.amount %></strong></p>
+      <p>Purchase of <strong><%= @order.art.title %></strong> for <strong><%= humanized_money_with_symbol @order.art.price %></strong></p>
       <button id="pay" class="btn btn-primary">Pay</button>
       <script src="https://js.stripe.com/v3/"></script>
       <script>
