--- a/app/assets/stylesheets/components/_store.scss
+++ b/app/assets/stylesheets/components/_store.scss
@@ -1,6 +1,6 @@
 #store .card {
   background-color: #fffaee;;
-  box-shadow: 2px 2px 4px grey;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border-radius: 4px;
 }
 
