--- a/app/views/arts/_animation.html.erb
+++ b/app/views/arts/_animation.html.erb
@@ -1,5 +1,7 @@
 <div id="animation" class="gallery">
-  <h1 class="text-center">Animation</h1>
+  <div class="flex-row">
+    <h1>Animation </h1>
+  </div>
   <%= render 'arts/gallery' %>
 </div>
 
