--- a/app/views/arts/_illustrations.html.erb
+++ b/app/views/arts/_illustrations.html.erb
@@ -1,4 +1,8 @@
 <div id="illustration" class="gallery">
-  <h1 class="text-center">Illustrations</h1>
+  <h1>Illustrations</h1>
+  <h2>Digital</h2>
   <%= render 'arts/gallery' %>
+  <h2>Tradtional</h2>
+  <%= render 'arts/gallery' %>
+
 </div>
