--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -7,6 +7,10 @@
   <%= render 'illustrations' %>
 </div>
 <div class="container">
+  <%= render 'logo' %>
+</div>
+<%= render "about" %>
+<div class="container">
   <%= render 'store' %>
 </div>
 <div class="contact-container">
