--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,7 +3,7 @@
     <div class="title">
       <h3>Melissa Goodway Art</h3>
       <hr>
-      <h5>Illustrator <span>|</span> Animator <span>|</span> Artist</h5>
+      <h5> Animator <span>|</span> Illustrator  <span>|</span> Artist</h5>
     </div>
   <% end %>
 
@@ -16,6 +16,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#illustration" data-controller="scroll-to">Illustration</a>
+      </li>
+      <li class="nav-item">
+         <a class="nav-link" href="#logo" data-controller="scroll-to">Logo</a>
       </li>
       <li class="nav-item">
          <a class="nav-link" href="#about" data-controller="scroll-to">About</a>
