--- a/app/assets/stylesheets/components/_contact.scss
+++ b/app/assets/stylesheets/components/_contact.scss
@@ -12,18 +12,32 @@
   object-fit: cover;
 }
 
+.overlay-img {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  height: 394px;
+  padding-left: 89px;
+}
+
+form.simple_form.contact {
+  padding: 24px;
+  inline-size: -webkit-fill-available;
+}
+
 .form-control {
   border-radius: 24px;
 }
 
+
  #contact .card{
     flex-direction: row;
     border-radius: 8px;
-    background-color: #e6d4a9;
-    box-shadow: 2px 2px 4px grey;
+    background-color: #e0ccaa;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   }
 
-@media only screen and (max-width: 768px) {
+@media (max-width: 576px) {
   .contact-picture {
     object-fit: cover;
     max-width: fit-content;
