--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -9,10 +9,14 @@
 @import "images";
 @import "contact";
 @import "store";
+@import "about";
+@import "modal";
+@import "button";
+@import "orders";
 
 
 body {
-  height: 100%;
+  height: 100vh;
   padding: 0;
   margin: 0;
   font-family: 'Source Sans Pro', sans-serif;
@@ -20,8 +24,18 @@ body {
   color: #140A02;
   padding-top: 10rem;
   top: -80px;
-  background-color: #fffaee;
+  // background-color: #e0ccaa;
   opacity: 1;
-  background: repeating-linear-gradient( 45deg, #e6d4a9, #e6d4a9 20px, #fffaee 20px, #fffaee 100px );
+  background: linear-gradient(180deg, #faf6ef, #e0ccaa);
+  background-attachment: fixed;
 }
 
+@media screen and (max-width: 667px) {
+    body {
+        overflow-x: hidden !important;
+    }
+    .container {
+        max-width: 100% !important;
+        overflow-x: hidden !important;
+    }
+}
