--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,8 +3,8 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem 1.5rem;
-  background-color: #fffaee;
-  z-index: 100;
+  background-color: #fcfaf7;
+  // z-index: 100;
 }
 
 
@@ -16,6 +16,12 @@
   padding-left: 3rem;
   text-align: center;
 
+}
+
+@media (max-width: 425px) {
+  .navbar .title {
+    padding-left: 0rem;
+  }
 }
 
 
@@ -88,8 +94,7 @@ hr {
     border-radius: 4px;
 }
 
-
-@media only screen and (max-width: 768px) {
+@media (max-width: 1024px) {
     .nav-menu {
         position: fixed;
         left: -100%;
