--- a/app/views/arts/_reel.html.erb
+++ b/app/views/arts/_reel.html.erb
@@ -1,17 +1,16 @@
 <div class="container d-flex justify-content-center text-center" id="reel">
-
   <div class="col-12 col-md-8 col-lg-6">
+    <h1 class="text-center">Reel</h1>
     <div class="reel">
       <iframe
-        src="https://player.cloudinary.com/embed/?public_id=v1664769247%2Fdevelopment%2Ftest_he0csw.mp4&cloud_name=dsn2mbfvg&player%5Bfluid%5D=true&player%5Bcontrols%5D=true&player%5Bcolors%5D%5Baccent%5D=%23bc9484&source%5BsourceTypes%5D%5B0%5D=mp4"
-        width="640"
-        height="480"
+        src="https://res.cloudinary.com/dsn2mbfvg/video/upload/v1664769247/development/test_he0csw.mp4"
+        width="680"
+        height="420"
         allow="autoplay; fullscreen; encrypted-media; picture-in-picture"
         allowfullscreen
         frameborder="0">
       </iframe>
     </div>
-    <h2>Reel</h2>
   </div>
 
 </div>
