--- a/app/views/contacts/_new.html.erb
+++ b/app/views/contacts/_new.html.erb
@@ -1,12 +1,12 @@
 <div class="container" id="contact">
   <div class="card">
     <%= cl_image_tag 'san_fran', class: 'contact-picture img-fluid'%>
-    <div class="card-body form">
-      <h4 class="card-title h5 h4-sm">Contact Form</h4>
+    <%# <%= image_tag  'letter', class: 'overlay-img img-fluid'%>
       <%= simple_form_for :contact, url: contacts_path do |f| %>
-            <%= f.input :name, required: true %>
+        <h4 class="card-title h5 h4-sm">Contact Form</h4>
+            <%= f.input :name, required: true, placeholder: 'Name' %>
 
-            <%= f.input :email, required: true, input_html: { autocomplete: 'email' } %>
+            <%= f.input :email, required: true, placeholder: 'Email', input_html: { autocomplete: 'email' } %>
 
             <%= f.input :message, as: :text, required: true, placeholder: "Send me a message"%>
 
@@ -15,7 +15,7 @@
               <%= f.text_field :nickname, :hint => 'Leave this field blank!' %>
             </div>
 
-            <%= f.submit 'Send Message', class: 'btn btn-primary' %>
+            <%= f.submit 'Send Message', class: 'my-btn' %>
         <% end %>
     </div>
   </div>
