--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row py-4">
-    <div class="col-md-3"><%= cl_image_tag @order.art.photo.key, width: '100%' %></div>
+    <div class="col-md-3"></div>
     <div class="col">
       <h1>Checkout summary</h1>
       <p>Purchase of <strong><%= @order.art.title %></strong> for <strong><%= humanized_money_with_symbol @order.art.price %></strong></p>
-      <button id="pay" class="btn btn-primary">Pay</button>
+      <button id="pay" class="my-btn">Pay</button>
       <script src="https://js.stripe.com/v3/"></script>
       <script>
         const paymentButton = document.getElementById('pay');
@@ -16,5 +16,24 @@
         });
       </script>
     </div>
+  </div>
+</div>
+
+<div class="card-product">
+  <%= cl_image_tag @order.art.photo.key, width: '100%' %>
+  <div class="card-product-infos">
+    <h1>Checkout summary</h1>
+      <p>Purchase of <strong><%= @order.art.title %></strong> for <strong><%= humanized_money_with_symbol @order.art.price %></strong></p>
+      <button id="pay" class="my-btn">Pay</button>
+      <script src="https://js.stripe.com/v3/"></script>
+      <script>
+        const paymentButton = document.getElementById('pay');
+        paymentButton.addEventListener('click', () => {
+          const stripe = Stripe('<%= ENV['STRIPE_PUBLISHABLE_KEY'] %>');
+          stripe.redirectToCheckout({
+            sessionId: '<%= @order.checkout_session_id %>'
+          });
+        });
+      </script>
   </div>
 </div>
