--- a/app/views/shared/_art_modal.html.erb
+++ b/app/views/shared/_art_modal.html.erb
@@ -7,7 +7,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <%= cl_image_tag art.photo.key, class: 'img' %>
+        <%= cl_image_tag art.photo.key, class: 'modal-img img-responsive' %>
         <%= art.description %>
       </div>
 
