database animations done

--- a/app/views/arts/_animation.html.erb
+++ b/app/views/arts/_animation.html.erb
@@ -2,11 +2,21 @@
   <div class="flex-row">
     <h1>Animation </h1>
   </div>
-  <%= render 'arts/gallery' %>
+  <div class="row">
+    <% @arts.each do |art| %>
+      <% if art.category == "animation" %>
+        <div class="col-6 col-md-4 col-lg-4">
+          <div class="card p-0">
+            <% if art.photo.attached?%>
+              <%= cl_image_tag art.photo.key, {remote: true, 'data-bs-toggle' => 'modal', 'data-bs-target' => "#artModal#{art.id}" } %>
+            <%end %>
+          </div>
+        </div>
+      <% end %>
+    <%= render 'shared/art_modal', art: art %>
+    <% end %>
+  </div>
 </div>
-
-
-
 
 
 
