--- a/app/views/arts/_illustrations.html.erb
+++ b/app/views/arts/_illustrations.html.erb
@@ -1,8 +1,36 @@
 <div id="illustration" class="gallery">
+  <%# DIGITAL %>
   <h1>Illustrations</h1>
   <h2>Digital</h2>
-  <%= render 'arts/gallery' %>
+  <div class="row">
+    <% @arts.each do |art| %>
+      <% if art.category == "digital" %>
+        <div class="col-6 col-md-4 col-lg-4">
+          <div class="card p-0">
+            <% if art.photo.attached?%>
+              <%= cl_image_tag art.photo.key, {remote: true, 'data-bs-toggle' => 'modal', 'data-bs-target' => "#artModal#{art.id}" } %>
+            <%end %>
+          </div>
+        </div>
+      <% end %>
+    <%= render 'shared/art_modal', art: art %>
+    <% end %>
+  </div>
+  <%# TRADITIONAL ART %>
   <h2>Tradtional</h2>
-  <%= render 'arts/gallery' %>
+  <div class="row">
+    <% @arts.each do |art| %>
+      <% if art.category == "traditional" %>
+        <div class="col-6 col-md-4 col-lg-4">
+          <div class="card p-0">
+            <% if art.photo.attached?%>
+              <%= cl_image_tag art.photo.key, {remote: true, 'data-bs-toggle' => 'modal', 'data-bs-target' => "#artModal#{art.id}" } %>
+            <%end %>
+          </div>
+        </div>
+      <% end %>
+    <%= render 'shared/art_modal', art: art %>
+    <% end %>
+  </div>
 
 </div>
