--- a/app/views/shared/_art_modal.html.erb
+++ b/app/views/shared/_art_modal.html.erb
@@ -1,5 +1,5 @@
 <!-- Modal -->
-<div class="modal fade" id="artModal" tabindex="-1" aria-labelledby="artModalLabel" aria-hidden="true">
+<div class="modal fade" id="artModal<%= art.id %>"  tabindex="-1" aria-labelledby="artModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
