--- a/app/views/arts/_reel.html.erb
+++ b/app/views/arts/_reel.html.erb
@@ -2,16 +2,16 @@
   <div class="col-12 col-md-8 col-lg-6">
     <h1 class="text-center">Reel</h1>
     <div class="reel">
-      <iframe
-        src="https://res.cloudinary.com/dsn2mbfvg/video/upload/v1664769247/development/test_he0csw.mp4"
-        width="680"
-        height="420"
-        allow="autoplay; fullscreen; encrypted-media; picture-in-picture"
-        allowfullscreen
-        frameborder="0">
-      </iframe>
+    <iframe
+      src="https://player.cloudinary.com/embed/?public_id=https%3A%2F%2Fres.cloudinary.com%2Fdsn2mbfvg%2Fvideo%2Fupload%2Fv1665725439%2Fdevelopment%2Fdemo_reel_september_2016.webm&cloud_name=dsn2mbfvg&player%5Bfluid%5D=true&player%5Bcontrols%5D=true&player%5BseekThumbnails%5D=true&source%5BsourceTypes%5D%5B0%5D=webm"
+      width="800"
+      height="480"
+      allow="autoplay; fullscreen; encrypted-media; picture-in-picture"
+      allowfullscreen
+      frameborder="0"
+      style="object-fit: cover;"
+    ></iframe>
     </div>
   </div>
-
 </div>
 
